--- a/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
+++ b/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
@@ -32,5 +32,15 @@
     <ClInclude Include="Engine\Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Structs\CBObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Engine\Shaders\Buffers\CBCamera.hlsli" />
+    <None Include="Engine\Shaders\Buffers\CBObject.hlsli" />
+    <None Include="Engine\Shaders\VS.hlsl" />
+    <None Include="Engine\Shaders\Buffers\SRVPositions.hlsli" />
+    <None Include="Engine\Shaders\VS_Instanced.hlsl" />
   </ItemGroup>
 </Project>
