--- a/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj
+++ b/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj
@@ -272,6 +272,7 @@
   <ItemGroup>
     <ClInclude Include="Engine\Camera.h" />
     <ClInclude Include="Engine\Engine.h" />
+    <ClInclude Include="Engine\GlobalDefs.h" />
     <ClInclude Include="Engine\Globals.h" />
     <ClInclude Include="Engine\Structs\CBCamera.h" />
     <ClInclude Include="Engine\Structs\CBObject.h" />
