Completed Vertex Based Instancing

--- a/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
+++ b/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="Engine\GlobalDefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Structs\PerInstanceBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\Buffers\CBCamera.hlsli" />
@@ -50,5 +53,6 @@
     <None Include="Engine\Shaders\VS_Instanced.hlsl" />
     <None Include="Engine\Shaders\PS_Instanced.hlsl" />
     <None Include="Engine\Shaders\PS.hlsl" />
+    <None Include="Engine\Shaders\VS_InstancedInputLayout.hlsl" />
   </ItemGroup>
 </Project>
