--- a/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
+++ b/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="Engine\Transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Structs\PerVertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\Buffers\CBCamera.hlsli" />
@@ -65,5 +68,6 @@
     <None Include="Engine\Shaders\VS_Instanced.hlsl" />
     <None Include="Engine\Shaders\PS.hlsl" />
     <None Include="Engine\Shaders\VS_InstancedInputLayout.hlsl" />
+    <None Include="Engine\Shaders\VSOut.hlsli" />
   </ItemGroup>
 </Project>
