--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,6 @@ StyleCopReport.xml
 *_h.h
 *.ilk
 *.meta
-*.obj
 *.iobj
 *.pch
 *.pdb
@@ -430,3 +429,6 @@ FodyWeavers.xsd
 *.exe
 *.out
 *.app
+
+# User-defined
+!**/Assets/*.obj
