Loaded cube.obj
TODO: Save the vertex and index data as well as meshes loaded as deleting causes data loss.

--- a/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
+++ b/instanced-rendering-directx11/instanced-rendering-directx11.vcxproj.filters
@@ -59,6 +59,12 @@
     <ClInclude Include="Engine\Structs\PerVertexBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Tools\Loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\Buffers\CBCamera.hlsli" />
